added loading spinner

--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
 <link rel='stylesheet' href='styles/normalize.css'>
 <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css" integrity="sha512-dTfge/zgoMYpP7QbHy4gWMEGsbsdZeCXz7irItjcC3sPUFtf0kuFbDz/ixG7ArTxmDjLXDmezHubeNikyKGVyQ==" crossorigin="anonymous">
 <link rel='stylesheet' href='styles/skeleton.css'>
+<link rel="stylesheet" href="http://css-spinners.com/css/spinner/spinner.css" type="text/css">
 <link rel='stylesheet' href='styles/main.css'>
 <script src='https://cdn.firebase.com/js/client/2.2.1/firebase.js'></script>
 </head>
@@ -23,11 +24,15 @@
 				<li role="separator" class="divider"></li>
 	  			<li role="presentation" class="nav__item"><a href="#">How to Use</a></li>
 	  			<li role="presentation" class="nav__item"><a href="createalbum.html">Upload</a></li>
-	  			<li role="presentation" class="nav__item"><a href="#">Login</a></li>
+	  		<!-- 	<li role="presentation" class="nav__item"><a href="#">Login</a></li> -->
 			</ul> 
 	</header><!-- header -->
 	<div class="container-fluid">
-		<div id="loading">loading</div>
+		<div id="loading">
+			<!-- <div class="loader">Loading...</div> -->
+			<div class="spinner-loader">Loading…</div>
+<!-- 			<span> Please, wait..</span> -->
+		</div>
 	<!-- 	<button id="add"><a href="createalbum.html">Add More Images</a></button> -->
 
 
