--- a/createalbum.html
+++ b/createalbum.html
@@ -60,6 +60,7 @@
 
 <script src='http://ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js'></script>
 <script src='javascript/main.js'></script>
+<script src='javascript/howToUse.js'></script>
 
 
 
