--- a/index.html
+++ b/index.html
@@ -17,32 +17,32 @@
 </head>
 
 <body>
-	<div class="howTo" id="search_modal">
-		<div class="howTo first modal">
+	<div class="howTo invisible invisible" id="search_modal">
+		<div id="first"class="howTo modal_child invisible">
 			<p>Hello, Welcome to the BLS marketing image data base. 
 
 			Let's start our tutorial, by searching by tag!</p>
 
-			<button>Next</button>
+			<button class="next">Next</button>
 		</div>
-		<div class="howTo second modal_child">
+		<div id="second"class="howTo invisible modal_child">
 			<p>I'm let's say I'm looking for some pictures of our dean Nick Allard with students and professors 
 
 			I'll click words like Nick or Nick Allard, Students, and Professors</p>
-			<button>Next</button>
+			<button class="next">Next</button>
 		</div>
-		<div class="howTo third modal_child"><!-- onload -->
+		<div id="third" class="howTo invisible modal_child"><!-- onload -->
 			<p>Now, the database is now searches for all images that have those tags,
 			and will show you them down here. 
 
 			Please be patient, it may take a minute to load. </p>
-			<button>Next</button>
+			<!-- <button class="next">Next</button> -->
 		</div>
-		<div class="howTo fourth modal_child"><!-- onload -->
+		<div id="fourth" class="howTo invisible modal_child"><!-- onload -->
 			<p>Take a look at an image you like and press the down load icon and it'll show up on your browser or in a new window you can easily save from. 
 
 			Now, Let's add some new photos you how to add images to the data base </p>
-			<button>Next</button>
+			<button class="next">Next</button>
 		</div>
 	</div>
 
