--- a/index.html
+++ b/index.html
@@ -39,9 +39,9 @@
 			<!-- <button class="next">Next</button> -->
 		</div>
 		<div id="fourth" class="howTo invisible modal_child"><!-- onload -->
-			<p>Take a look at an image you like and press the down load icon and it'll show up on your browser or in a new window you can easily save from. 
-
-			Now, Let's add some new photos you how to add images to the data base </p>
+			<p>If I see an image I want to use I can press the download icon and it will down load </p>
+			<span class='download glyphicon glyphicon-download-alt'></span>
+			<p>try clicking the download icon on the first image, Then hit next</p>
 			<button class="next">Next</button>
 		</div>
 	</div>
