--- a/index.html
+++ b/index.html
@@ -17,28 +17,28 @@
 </head>
 
 <body>
-	<div class="howTo invisible invisible" id="search_modal">
-		<div id="first"class="howTo modal_child invisible">
+	<div class="howTo invisible" id="search_modal">
+		<div id="first"class="modal_child invisible">
 			<p>Hello, Welcome to the BLS marketing image data base. 
 
 			Let's start our tutorial, by searching by tag!</p>
 
 			<button class="next">Next</button>
 		</div>
-		<div id="second"class="howTo invisible modal_child">
+		<div id="second"class="invisible modal_child">
 			<p>I'm let's say I'm looking for some pictures of our dean Nick Allard with students and professors 
 
 			I'll click words like Nick or Nick Allard, Students, and Professors</p>
 			<button class="next">Next</button>
 		</div>
-		<div id="third" class="howTo invisible modal_child"><!-- onload -->
+		<div id="third" class="invisible modal_child"><!-- onload -->
 			<p>Now, the database is now searches for all images that have those tags,
 			and will show you them down here. 
 
 			Please be patient, it may take a minute to load. </p>
 			<!-- <button class="next">Next</button> -->
 		</div>
-		<div id="fourth" class="howTo invisible modal_child"><!-- onload -->
+		<div id="fourth" class="invisible modal_child"><!-- onload -->
 			<p>If I see an image I want to use I can press the download icon and it will down load </p>
 			<span class='download glyphicon glyphicon-download-alt'></span>
 			<p>try clicking the download icon on the first image, Then hit next</p>
