made a few more how to updates- still need to style

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css" integrity="sha512-dTfge/zgoMYpP7QbHy4gWMEGsbsdZeCXz7irItjcC3sPUFtf0kuFbDz/ixG7ArTxmDjLXDmezHubeNikyKGVyQ==" crossorigin="anonymous">
 <link rel='stylesheet' href='styles/skeleton.css'>
 <link rel="stylesheet" href="http://css-spinners.com/css/spinner/spinner.css" type="text/css">
-<link rel='stylesheet' href='styles/main.css'>
+<link rel='stylesheet' href='styles/bls.css'>
 <script src='https://cdn.firebase.com/js/client/2.2.1/firebase.js'></script>
 </head>
 
