--- a/quickstart.html
+++ b/quickstart.html
@@ -19,7 +19,7 @@
         Authorize
       </button>
     </div>
-    <pre id="output"></pre>
+    <!-- <pre id="output"></pre> -->
   
     <script src="https://apis.google.com/js/client.js?onload=checkAuth">
     </script>
