--- a/createalbum.html
+++ b/createalbum.html
@@ -15,8 +15,8 @@
 
 <body>
 	 <!--authorization -->
-	   <input type='file' id="imgInp" />
-      <img id="blah" src="#" alt="your image" />
+<!-- 	   <input type='file' id="imgInp" />
+      <img id="blah" src="#" alt="your image" /> -->
 
     <div id="authorize-div" style="display: none">
       <span>Authorize access to Drive API</span>
@@ -25,7 +25,7 @@
         Authorize
       </button>
     </div>
-    <pre id="output"></pre> 
+ <!--    <pre id="output"></pre>  -->
 
 	<div class="howTo invisible" id="upload_modal">
 		<div id="fifth"class="modal_child invisible">
@@ -100,7 +100,6 @@
 	    		<div class="row current_thumbnails" id="newGroup">
 	    			<div>
 
-	    			
 	    		</div>
 	    	</div>
 		</div><!--addImgs-->
@@ -111,7 +110,7 @@
 
 <script src='http://ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js'></script>
 <script src="https://apis.google.com/js/client.js?onload=checkAuth"></script>
-<script src='javascript/backup.js'></script>
+<script src='javascript/main.js'></script>
 <script src='javascript/howToUse.js'></script>
 
 
