--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 
 <head>
-    
+   
 <meta name='viewport' content='width=device-width, initial-scale=1.0;'>
     
 
@@ -13,6 +13,7 @@
 <link rel='stylesheet' href='styles/skeleton.css'>
 <link rel="stylesheet" href="http://css-spinners.com/css/spinner/spinner.css" type="text/css">
 <link rel='stylesheet' href='styles/bls.css'>
+<script src='javascript/googleapi.js'></script>
 <script src='https://cdn.firebase.com/js/client/2.2.1/firebase.js'></script>
 </head>
 
@@ -67,6 +68,7 @@
  	</div><!--container-->
 
 <script src='http://ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js'></script>
+<!-- <script src="https://apis.google.com/js/client.js?onload=checkAuth"></script> -->
 <script src='javascript/search.js'></script>
 <script src='javascript/download.js'></script>
 <script src='javascript/howToUse.js'></script>
