--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
 
 	<header>
 			<ul class="nav inline_block">
-				<li role="presentation" class="nav__item nav_logo"><a href="#"><img src="imgs/BLS_logo_primary_red.png"  width="80%" height="auto"></a></li>
+				<li role="presentation" class="nav_logo"><a href="#"><img src="imgs/BLS_logo_primary_red.png"  width="80%" height="auto"></a></li>
 				<li role="separator" class="divider"></li>
 	  			<li role="presentation" class="nav__item" id="demo"><a href="#">How to Use</a></li>
 	  			<li role="presentation" class="nav__item"><a href="createalbum.html">Upload</a></li>
