adding more styles

--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
 	</div>
 
 	<header>
-			<ul class="nav inline_block">
+			<ul class="nav">
 				<li role="presentation" class="nav_logo"><a href="#"><img src="imgs/BLS_logo_primary_red.png"  width="80%" height="auto"></a></li>
 				<li role="separator" class="divider"></li>
 	  			<li role="presentation" class="nav__item" id="demo"><a href="#">How to Use</a></li>
