adding mobile styles

--- a/createalbum.html
+++ b/createalbum.html
@@ -25,14 +25,13 @@
 
 	<div class="howTo invisible" id="upload_modal">
 		<div id="fifth"class="modal_child invisible">
-			<p>Aright Let's make our first album
+			<p>Alright! Let's make our first album.
 			   Let's start by clicking the upload button and selecting an image or two. 
-
 			   You'll see the images appear on your left. 
 			</p>
 			<button class="next">Next</button>
 		</div>
-		<div id="sixth"class="modal_child invisible right">
+		<div id="sixth"class="modal_child invisible">
 			<p>To create group tags, type your tag name here, 
 			these tags will be added to every image in this album, including ones you add later. 
 			You can upload and tag images in whatever order you feel like. 
