--- a/index.html
+++ b/index.html
@@ -21,29 +21,24 @@
 <body>
 	<div class="howTo invisible" id="search_modal">
 		<div id="first"class="modal_child invisible">
-			<p>Hello, Welcome to the BLS marketing image data base. 
-
+			<p>Hello, Welcome to the BLS marketing image database. 
 			Let's start our tutorial, by searching by tag!</p>
-
 			<button class="next">Next</button>
 		</div>
 		<div id="second"class="invisible modal_child">
-			<p>I'm let's say I'm looking for some pictures of our dean Nick Allard with students and professors 
-
-			I'll click words like Nick or Nick Allard, Students, and Professors</p>
+			<p>Let's say I'm looking for some pictures of our dean Nick Allard with students and professors. I would click words like Nick or Nick Allard, Students, and Professors. </p>
+		<!-- 	<em>(Press next to see a demo search.)</em><br> -->
 			<button class="next">Next</button>
 		</div>
 		<div id="third" class="invisible modal_child"><!-- onload -->
-			<p>Now, the database is now searches for all images that have those tags,
-			and will show you them down here. 
-
-			Please be patient, it may take a minute to load. </p>
-			<!-- <button class="next">Next</button> -->
+			<p>All the images that have any of the selected tags will show up here. Pictures with all three tags will be in front of images with one or two tags.</p>
+			<button class="next">Next</button>
 		</div>
 		<div id="fourth" class="invisible modal_child"><!-- onload -->
-			<p>If I see an image I want to use I can press the download icon and it will down load </p>
-			<span class='download glyphicon glyphicon-download-alt'></span>
-			<p>try clicking the download icon on the first image, Then hit next</p>
+			<p>If I see an image I want to use I can press the download icon.
+				<span class='download glyphicon glyphicon-download-alt'></span>
+			</p>
+			<p>Try clicking the download icon on the first image, then hit next.</p>
 			<button class="next">Next</button>
 		</div>
 	</div>
