added more mobile styles

--- a/createalbum.html
+++ b/createalbum.html
@@ -38,17 +38,17 @@
 			</p>
 			<button class="next">Next</button>
 		</div>
-		<div id="seventh"class="modal_child invisible mleft">
+		<div id="seventh"class="modal_child invisible">
 			<p>To add a tag to one particular image only add it in here 
 			</p>
 			<button class="next">Next</button>
 		</div>
-		<div id="eighth"class="modal_child invisible mleft">
+		<div id="eighth"class="modal_child invisible">
 			<p>If we want to remove a tag from one particular image click the "x" over here 
 			</p>
 			<button class="next">Next</button>
 		</div>
-		<div id="ninth" class="modal_child invisible right">
+		<div id="ninth" class="modal_child invisible">
 			<p>If we want to delete a tag from all the groups click the "x" over here 
 			</p>
 			<button class="next">Next</button>
