made banner responsive

--- a/index.html
+++ b/index.html
@@ -45,8 +45,8 @@
 
 	<header>
 			<ul class="nav">
-				<li role="presentation" class="nav_logo"><a href="#"><img src="imgs/BLS_logo_primary_white.png"  width="80%" height="auto"></a></li>
-				<li role="separator" class="divider"></li>
+				<li role="presentation" class="nav_logo"><a><img src="imgs/BLS_logo_primary_white.png"  width="80%" height="auto"></a></li>
+				<li role="presentation" class="nav_logo_icon"><a><img src="imgs/BLS_icon_white.png"  width="20%" height="auto"></a></li>
 	  			<li role="presentation" class="nav__item" id="demo"><a href="#">How to Use</a></li>
 	  			<li role="presentation" class="nav__item"><a href="createalbum.html">Upload</a></li>
 	  		</ul> 
