--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
 <script src='http://ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js'></script>
 <!-- <script src="https://apis.google.com/js/client.js?onload=checkAuth"></script> -->
 <script src='javascript/search.js'></script>
-<script src='javascript/download.js'></script>
+<!-- <script src='javascript/download.js'></script> -->
 <script src='javascript/howToUse.js'></script>
 
 
