--- a/createalbum.html
+++ b/createalbum.html
@@ -44,7 +44,7 @@
 			<button class="next">Next</button>
 		</div>
 		<div id="eighth"class="modal_child invisible">
-			<p>If we want to remove a tag from one particular image click the "x" over here 
+			<p>If we want to remove a tag from one particular image click the "x" over here. 
 			</p>
 			<button class="next">Next</button>
 		</div>
@@ -88,6 +88,7 @@
 
 	    	<div class="right_col">
 	    		<div class="current_thumbnails" id="newGroup">
+	    			<em class="serif">Nothing Uploaded Yet</em>
 	    		</div>
 	    	</div>
 		</div><!--addImgs-->
@@ -105,6 +106,11 @@
 
 
 </body>
+<footer> 
+	<p>This website was built by <a href="https://samanthavinci.com">Samantha Vinci</a>. To see more of my work visit my 
+	<a href="https://github.com/svinci131">git hub.</a>
+	</p>  
+</footer>
 
 </html>
 
