--- a/index.html
+++ b/index.html
@@ -66,12 +66,16 @@
 <script src='http://ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js'></script>
 <!-- <script src="https://apis.google.com/js/client.js?onload=checkAuth"></script> -->
 <script src='javascript/search.js'></script>
-<!-- <script src='javascript/download.js'></script> -->
 <script src='javascript/howToUse.js'></script>
 
 
 
 </body>
+<footer> 
+	<p>This website was built by Samantha Vinci. To see more of my work visit my 
+	<a href="https://github.com/svinci131">git hub.</a>
+	</p>  
+</footer>
 
 </html>
 
