done with styling and everything else, unless bugs arise

--- a/createalbum.html
+++ b/createalbum.html
@@ -39,23 +39,23 @@
 			<button class="next">Next</button>
 		</div>
 		<div id="seventh"class="modal_child invisible">
-			<p>To add a tag to one particular image only add it in here 
+			<p>To add a tag to one particular image only add it in here. 
 			</p>
 			<button class="next">Next</button>
 		</div>
 		<div id="eighth"class="modal_child invisible">
-			<p>If we want to remove a tag from one particular image click the "x" over here. 
+			<p>If we want to remove a tag from one particular image, click the "x" over here. 
 			</p>
 			<button class="next">Next</button>
 		</div>
 		<div id="ninth" class="modal_child invisible">
-			<p>If we want to delete a tag from all the groups click the "x" over here 
+			<p>If we want to delete a tag from all the groups, click the "x" over here. 
 			</p>
 			<button class="next">Next</button>
 		</div>
 		<div id="tenth"class="modal_child invisible">
-			<p>When You're done, Hit save and then done 
-			or just click done, to exit with out saving. 
+			<p>When you're done, hit save and then done, 
+			or just click done, to exit without saving. 
 			</p>
 			<button class="next">Next</button>
 		</div>
