--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
 
 </body>
 <footer> 
-	<p>This website was built by Samantha Vinci. To see more of my work visit my 
+	<p>This website was built by <a href="https://samanthavinci.com">Samantha Vinci</a>. Click here to see more: 
 	<a href="https://github.com/svinci131">git hub.</a>
 	</p>  
 </footer>
