Updating gh-pages from master branch via GitBot

--- a/createalbum.html
+++ b/createalbum.html
@@ -61,13 +61,9 @@
 		</div>
 	</div>
 	<div>
-		<!-- <div class="upload_header">
-			<img src="imgs/BLS_logo_primary_red.png" width="20%" height="auto">
-		</div><!-- header -->
-		
 		<div class="container">			
 			<div class="addImg left_col">
-				<img class="logo" src="imgs/BLS_logo_primary_red.png"> 
+				<a href="index.html"><img class="logo" src="imgs/BLS_logo_primary_red.png"> </a>
 				<div class="addImg_buttons">
 					<a href="#" onclick="document.getElementById('fileID').click(); return false;"/>
 						<button  id="upload" class="btn btn-default btn-file">upload
@@ -105,7 +101,7 @@
 
 </body>
 <footer> 
-	<p>This website was built by <a href="https://samanthavinci.com">Samantha Vinci</a>. To see more of my work visit my 
+	<p>This website was built by <a href="https://samanthavinci.com">Samantha Vinci</a>. Click here to see more: 
 	<a href="https://github.com/svinci131">git hub.</a>
 	</p>  
 </footer>
