--- a/index.html
+++ b/index.html
@@ -44,13 +44,17 @@
 
 	<header>
 			<ul class="nav">
-				<li role="presentation" class="nav_logo"><a><img src="imgs/BLS_logo_primary_white.png"  width="80%" height="auto"></a></li>
-				<li role="presentation" class="nav_logo_icon"><a><img src="imgs/BLS_icon_white.png"  width="20%" height="auto"></a></li>
+				<li role="presentation" class="nav_logo"><a href="index.html"><img src="imgs/BLS_logo_primary_white.png"  width="80%" height="auto"></a></li>
+				<li role="presentation" class="nav_logo_icon"><a href="index.html"><img src="imgs/BLS_icon_white.png"  width="20%" height="auto"></a></li>
 	  			<li role="presentation" class="nav__item" id="demo"><a href="#">How to Use</a></li>
 	  			<li role="presentation" class="nav__item"><a href="createalbum.html">Upload</a></li>
 	  		</ul> 
 	</header><!-- header -->
 	<div class="container-fluid">
+		<div class="onload">
+			<div class='glyphicon glyphicon-remove'></div>
+			<h5 class="serif">Click a Tag to Get Started</h5>
+		</div>
 		<div id="loading">
 			<div class="spinner-loader">Loading…</div>
 		</div>
@@ -63,7 +67,7 @@
  	</div><!--container-->
 
 <script src='http://ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js'></script>
-<!-- <script src="https://apis.google.com/js/client.js?onload=checkAuth"></script> -->
+<script src="https://apis.google.com/js/client.js?onload=checkAuth"></script>
 <script src='javascript/search.js'></script>
 <script src='javascript/howToUse.js'></script>
 
@@ -71,7 +75,7 @@
 
 </body>
 <footer> 
-	<p>This website was built by Samantha Vinci. To see more of my work visit my 
+	<p>This website was built by <a href="https://samanthavinci.com">Samantha Vinci</a>. Click here to see more: 
 	<a href="https://github.com/svinci131">git hub.</a>
 	</p>  
 </footer>
