created a click a tag to get started box onload

--- a/index.html
+++ b/index.html
@@ -44,13 +44,17 @@
 
 	<header>
 			<ul class="nav">
-				<li role="presentation" class="nav_logo"><a><img src="imgs/BLS_logo_primary_white.png"  width="80%" height="auto"></a></li>
-				<li role="presentation" class="nav_logo_icon"><a><img src="imgs/BLS_icon_white.png"  width="20%" height="auto"></a></li>
+				<li role="presentation" class="nav_logo"><a href="index.html"><img src="imgs/BLS_logo_primary_white.png"  width="80%" height="auto"></a></li>
+				<li role="presentation" class="nav_logo_icon"><a href="index.html"><img src="imgs/BLS_icon_white.png"  width="20%" height="auto"></a></li>
 	  			<li role="presentation" class="nav__item" id="demo"><a href="#">How to Use</a></li>
 	  			<li role="presentation" class="nav__item"><a href="createalbum.html">Upload</a></li>
 	  		</ul> 
 	</header><!-- header -->
 	<div class="container-fluid">
+		<div class="onload">
+			<div class='glyphicon glyphicon-remove'></div>
+			<h5 class="serif">Click a Tag to Get Started</h5>
+		</div>
 		<div id="loading">
 			<div class="spinner-loader">Loading…</div>
 		</div>
