--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
  	</div><!--container-->
 
 <script src='http://ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js'></script>
-<!-- <script src="https://apis.google.com/js/client.js?onload=checkAuth"></script> -->
+<script src="https://apis.google.com/js/client.js?onload=checkAuth"></script>
 <script src='javascript/search.js'></script>
 <script src='javascript/howToUse.js'></script>
 
