--- a/createalbum.html
+++ b/createalbum.html
@@ -85,7 +85,7 @@
 
 	    	<div class="right_col">
 	    		<div class="current_thumbnails" id="newGroup">
-	    			<em class="serif">Nothing Uploaded Yet</em>
+	    			<p class="serif center ital">Nothing Uploaded Yet</p>
 	    		</div>
 	    	</div>
 		</div><!--addImgs-->
