--- a/index.html
+++ b/index.html
@@ -63,6 +63,7 @@
 			</div>
 		</div>
 		<div class="thumbnails" id="fileList">
+		Click a tag to get started!
 		</div><!--thumbnails-->
  	</div><!--container-->
 
