--- a/index.html
+++ b/index.html
@@ -51,10 +51,6 @@
 	  		</ul> 
 	</header><!-- header -->
 	<div class="container-fluid">
-		<div class="onload">
-			<div class='glyphicon glyphicon-remove'></div>
-			<h5 class="serif">Click a Tag to Get Started</h5>
-		</div>
 		<div id="loading">
 			<div class="spinner-loader">Loading…</div>
 		</div>
@@ -63,7 +59,7 @@
 			</div>
 		</div>
 		<div class="thumbnails" id="fileList">
-		Click a tag to get started!
+			<p class="serif ital center">Click a tag to get started!</p>
 		</div><!--thumbnails-->
  	</div><!--container-->
 
@@ -76,8 +72,7 @@
 
 </body>
 <footer> 
-	<p>This website was built by <a href="https://samanthavinci.com">Samantha Vinci</a>. Click here to see more: 
-	<a href="https://github.com/svinci131">git hub.</a>
+	<p>This website was built by <a href="https://samanthavinci.com">Samantha Vinci</a>. Click <a href="https://github.com/svinci131">here</a> to see more.
 	</p>  
 </footer>
 
