added an about page

--- a/createalbum.html
+++ b/createalbum.html
@@ -101,9 +101,8 @@
 
 </body>
 <footer> 
-	<p>This website was built by <a href="https://samanthavinci.com">Samantha Vinci</a>. Click here to see more: 
-	<a href="https://github.com/svinci131">git hub.</a>
-	</p>  
+	<p>This website was built by <a href="https://samanthavinci.com">Samantha Vinci</a>.</p> <p class="ital serif white footer_sub"> Click <a href="https://github.com/svinci131">here</a> to see more.</p>
+	 
 </footer>
 
 </html>
