--- a/index.html
+++ b/index.html
@@ -46,6 +46,7 @@
 			<ul class="nav">
 				<li role="presentation" class="nav_logo"><a href="index.html"><img src="imgs/BLS_logo_primary_white.png"  width="80%" height="auto"></a></li>
 				<li role="presentation" class="nav_logo_icon"><a href="index.html"><img src="imgs/BLS_icon_white.png"  width="20%" height="auto"></a></li>
+				<li role="presentation" class="nav__item" id="demo"><a href="about.html">About</a></li>
 	  			<li role="presentation" class="nav__item" id="demo"><a href="#">How to Use</a></li>
 	  			<li role="presentation" class="nav__item"><a href="createalbum.html">Upload</a></li>
 	  		</ul> 
@@ -72,8 +73,8 @@
 
 </body>
 <footer> 
-	<p>This website was built by <a href="https://samanthavinci.com">Samantha Vinci</a>. Click <a href="https://github.com/svinci131">here</a> to see more.
-	</p>  
+	<p>This website was built by <a href="https://samanthavinci.com">Samantha Vinci</a>.</p> <p class="ital serif white footer_sub"> Click <a href="https://github.com/svinci131">here</a> to see more.</p>
+	 
 </footer>
 
 </html>
