--- a/about.html
+++ b/about.html
@@ -14,6 +14,7 @@
 	<link rel="stylesheet" href="http://css-spinners.com/css/spinner/spinner.css" type="text/css">
 	 <link href='http://fonts.googleapis.com/css?family=Source+Sans+Pro:400,700|Oswald:700|Merriweather:700,700italic' rel='stylesheet' type='text/css'>
 	<link rel='stylesheet' href='styles/main.css'>
+	<script src='https://cdn.firebase.com/js/client/2.2.1/firebase.js'></script>
 </head>
 <body>
 	<header>
@@ -21,7 +22,7 @@
 				<li role="presentation" class="nav_logo"><a href="index.html"><img src="imgs/BLS_logo_primary_white.png"  width="80%" height="auto"></a></li>
 				<li role="presentation" class="nav_logo_icon"><a href="index.html"><img src="imgs/BLS_icon_white.png"  width="20%" height="auto"></a></li>
 				<li role="presentation" class="nav__item" id="demo"><a href="about.html">About</a></li>
-	  			<li role="presentation" class="nav__item" id="demo"><a href="index.html">How to Use</a></li>
+	  			<li role="presentation" class="nav__item _demo"><a href="#">How to Use</a></li>
 	  			<li role="presentation" class="nav__item"><a href="createalbum.html">Upload</a></li>
 	  		</ul> 
 	</header><!-- header -->
@@ -33,6 +34,9 @@
 			<p>The image sorter, allows employees to upload images to a shared google drive folder and assign the images specefic tags. So, if a BLS employee needs to picture of the Dean with students and professors, they can search those tags and immediately see every one of those images that is available.</p>
 		</div>
 	</section>
+	<script src='http://ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js'></script>
+	<script src="https://apis.google.com/js/client.js?onload=checkAuth"></script>
+	<script src='javascript/howToUse.js'></script>
 </body>
 <footer> 
 	<p>This website was built by <a href="https://samanthavinci.com">Samantha Vinci</a>.</p> <p class="ital serif white footer_sub"> Click <a href="https://github.com/svinci131">here</a> to see more.</p>
