--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
 			<ul class="nav">
 				<li role="presentation" class="nav_logo"><a href="index.html"><img src="imgs/BLS_logo_primary_white.png"  width="80%" height="auto"></a></li>
 				<li role="presentation" class="nav_logo_icon"><a href="index.html"><img src="imgs/BLS_icon_white.png"  width="20%" height="auto"></a></li>
-				<li role="presentation" class="nav__item" id="demo"><a href="about.html">About</a></li>
+				<li role="presentation" class="nav__item _demo"><a href="about.html">About</a></li>
 	  			<li role="presentation" class="nav__item" id="demo"><a href="#">How to Use</a></li>
 	  			<li role="presentation" class="nav__item"><a href="createalbum.html">Upload</a></li>
 	  		</ul> 
