Updating gh-pages from master branch via GitBot

--- a/index.html
+++ b/index.html
@@ -44,17 +44,15 @@
 
 	<header>
 			<ul class="nav">
+				<li role="presentation" class="nav_logo_red"><a href="index.html"><img src="imgs/BLS_logo_primary_red.png"  width="80%" height="auto"></a></li>
 				<li role="presentation" class="nav_logo"><a href="index.html"><img src="imgs/BLS_logo_primary_white.png"  width="80%" height="auto"></a></li>
 				<li role="presentation" class="nav_logo_icon"><a href="index.html"><img src="imgs/BLS_icon_white.png"  width="20%" height="auto"></a></li>
+				<li role="presentation" class="nav__item _demo"><a href="about.html">About</a></li>
 	  			<li role="presentation" class="nav__item" id="demo"><a href="#">How to Use</a></li>
 	  			<li role="presentation" class="nav__item"><a href="createalbum.html">Upload</a></li>
 	  		</ul> 
 	</header><!-- header -->
 	<div class="container-fluid">
-		<div class="onload">
-			<div class='glyphicon glyphicon-remove'></div>
-			<h5 class="serif">Click a Tag to Get Started</h5>
-		</div>
 		<div id="loading">
 			<div class="spinner-loader">Loading…</div>
 		</div>
@@ -63,6 +61,7 @@
 			</div>
 		</div>
 		<div class="thumbnails" id="fileList">
+			<p class="serif ital center">Click a tag to get started!</p>
 		</div><!--thumbnails-->
  	</div><!--container-->
 
@@ -75,9 +74,8 @@
 
 </body>
 <footer> 
-	<p>This website was built by <a href="https://samanthavinci.com">Samantha Vinci</a>. Click here to see more: 
-	<a href="https://github.com/svinci131">git hub.</a>
-	</p>  
+	<p>This website was built by <a href="https://samanthavinci.com">Samantha Vinci</a>.</p> <p class="ital serif white footer_sub"> Click <a href="https://github.com/svinci131">here</a> to see more.</p>
+	 
 </footer>
 
 </html>
