--- a/createalbum.html
+++ b/createalbum.html
@@ -15,7 +15,7 @@
 
 <body>
     <div id="authorize-div" style="display: none">
-      <span>Authorize access to Drive API</span>
+      <div>Authorize access to Drive API</div>
       <!--Button for the user to click to initiate auth sequence -->
       <button id="authorize-button" onclick="handleAuthClick(event)">
         Authorize
