cleaned up a bit more

--- a/index.html
+++ b/index.html
@@ -44,6 +44,7 @@
 
 	<header>
 			<ul class="nav">
+				<li role="presentation" class="nav_logo_red"><a href="index.html"><img src="imgs/BLS_logo_primary_red.png"  width="80%" height="auto"></a></li>
 				<li role="presentation" class="nav_logo"><a href="index.html"><img src="imgs/BLS_logo_primary_white.png"  width="80%" height="auto"></a></li>
 				<li role="presentation" class="nav_logo_icon"><a href="index.html"><img src="imgs/BLS_icon_white.png"  width="20%" height="auto"></a></li>
 				<li role="presentation" class="nav__item _demo"><a href="about.html">About</a></li>
