--- a/createalbum.html
+++ b/createalbum.html
@@ -14,13 +14,13 @@
 
 
 <body>
-  <!--   <div id="authorize-div" style="display: none">
+    <div id="authorize-div" style="display: none">
       <div>Authorize access to Drive API</div>
       Button for the user to click to initiate auth sequence 
       <button id="authorize-button" onclick="handleAuthClick(event)">
         Authorize
       </button>
-    </div> -->
+    </div>
  <!--<pre id="output"></pre>-->
 
 	<div class="howTo invisible" id="upload_modal">
